  standard integer number registers, with which they share a common name
  space.
* [nt]roff: The ".if f expr" condition has been introduced to evaluate
  an expression with floating-point computation.
* [nt]roff: Exponential notation, as in "1e+10", is now supported in
  numerical expressions.
* [nt]roff: Debugging requests for watching macros, strings, and number
  registers have been added.
* [nt]roff: The ".cp" request has been added to control compatibility with
  groff.
* [nt]roff: The "-mg" macro package has been added for improved support of
  groff documents, preprocessors, and macro sets.
* [nt]roff: The ".while", ".break", and ".continue" requests have been
  added as another method to process input repeatedly.
* [nt]roff: Space characters inside parentheses in numerical expressions
  are now permissible, i.e. they are discarded and do not terminate the
  expression.
* [nt]roff: The ".char", ".fchar", and ".rchar" requests have been added
  to transform a single input character to multiple output characters.
* [nt]roff: The ".ecs" and ".ecr" requests have been added to save and
  restore the escape character.
* [nt]roff: The ".shc" request has been added to set the soft hyphen
  character.
* [nt]roff: The ".hcode" request has been added to specify character
  mappings for hyphenation purposes.
* [nt]roff: The sets of sentence-ending and transparent characters are
  now configurable with the ".sentchar" and ".transchar" requests.
* [nt]roff: The set of optional line break characters (normally hyphen
  and em dash) is now configurable with the ".breakchar" request.
* [nt]roff: The ".nhychar" request defines a set of hyphenation-
  inhibiting characters (as hyphen and em dash with traditional troff
  hyphenation).
* troff: The second argument to the ".ss" request now actually sets the
  size of the sentence-end space instead of just switching it on or off.
* [nt]roff: The ".unformat" and ".asciify" requests have been added to